[gd_scene load_steps=9 format=3 uid="uid://dpsdumn3y3rhr"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_48e6m"]
[ext_resource type="PackedScene" uid="uid://c5bnsgjapo6r4" path="res://ui/options_menu.tscn" id="1_oy0tq"]

[sub_resource type="Gradient" id="Gradient_fo2b3"]
colors = PackedColorArray(0, 0, 0, 0.509804, 0, 0, 0, 0.509804)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tt8l4"]
gradient = SubResource("Gradient_fo2b3")

[sub_resource type="SystemFont" id="SystemFont_u7rcg"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_wio6m"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_y1m23"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_6s4a7"]
font_names = PackedStringArray("Impact")

[node name="PauseMenu" type="Control"]
visible = false
z_index = 15
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48e6m")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_tt8l4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_u7rcg")
theme_override_font_sizes/font_size = 32
text = "Game Paused"
horizontal_alignment = 1

[node name="ResumeBtn" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = SubResource("SystemFont_wio6m")
theme_override_font_sizes/font_size = 24
text = "Resume Game"

[node name="OptionsBtn" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_y1m23")
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="ExitMenuBtn" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_6s4a7")
theme_override_font_sizes/font_size = 24
text = "Exit Game"

[node name="OptionsMenu" parent="." instance=ExtResource("1_oy0tq")]
visible = false
layout_mode = 1
